Good basic analog clock

--- a/display/src/css/clock.css
+++ b/display/src/css/clock.css
@@ -1,9 +1,20 @@
-.clock {
-    text-align: center;
-    color: white;
-    font-size: 4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+#hour {
+    fill: white;
+    stroke: black;
+    stroke-width: 1
+}
+#minute {
+    fill: white;
+    stroke: black;
+    stroke-width: 1
+}
+#second {
+    fill: red;
+    stroke: black;
+    stroke-width: 0
+}
+.tick {
+    fill: white;
+    stroke: black;
+    stroke-width: 0
 }
