--- a/display/src/css/clock.css
+++ b/display/src/css/clock.css
@@ -1,3 +1,8 @@
+#clock {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 #hour {
     fill: white;
     stroke: black;
@@ -11,7 +16,7 @@
 #second {
     fill: red;
     stroke: black;
-    stroke-width: 0
+    stroke-width: 1
 }
 .tick {
     fill: white;
