--- a/display/src/css/styles.css
+++ b/display/src/css/styles.css
@@ -4,6 +4,6 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: white;
 }
 
