--- a/display/src/css/styles.css
+++ b/display/src/css/styles.css
@@ -1,9 +1,15 @@
 body, html {
     height: 100%;
     margin: 0;
-    display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: black;
 }
+#content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%
+}
+
 
