--- a/display/src/css/styles.css
+++ b/display/src/css/styles.css
@@ -1,5 +1,7 @@
 body, html {
-    height: 100%;
+    height: 100%vh
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     margin: 0;
     justify-content: center;
     align-items: center;
