--- a/display/src/app/clock/clock.css
+++ b/display/src/app/clock/clock.css
@@ -10,12 +10,12 @@
   justify-content: center;
   align-items: center;
 }
-#hour {
+#clock #hour {
     fill: white;
     stroke: black;
     stroke-width: 1
 }
-#minute {
+#clock #minute {
     fill: white;
     stroke: black;
     stroke-width: 1
@@ -25,7 +25,7 @@
     stroke: black;
     stroke-width: 1
 }
-.tick {
+#clock .tick {
     fill: white;
     stroke: black;
     stroke-width: 0
