--- a/display/src/app/mondaine_clock/mondaine_clock.css
+++ b/display/src/app/mondaine_clock/mondaine_clock.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
 }
-#mondaine-clock #clock div {
+#mondaine-clock div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +20,7 @@
     fill: black;
     stroke: black;
     stroke-width: 1;
-    filter: drop-shadow(4px -6px 2px rgb(0 0 0 / 0.4));
+    filter: drop-shadow(-4px 6px 2px rgb(0 0 0 / 0.4));
 }
 #mondaine-clock .second  {
     fill: red;
