--- a/display/src/app/weather/weather.css
+++ b/display/src/app/weather/weather.css
@@ -20,7 +20,8 @@
     stroke: white;
     stroke-width: 2;
 }
-#weather div#moonsvg circle {
+#weather div#moonsvg circle, #weather div#moonsvg path {
     stroke: white;
+    fill: white;
     stroke-width: 4;
 }
